08/19 백엔드 건들기 전 커밋

--- a/approval/templates/approval/approval_detail.html
+++ b/approval/templates/approval/approval_detail.html
@@ -91,7 +91,7 @@
         </div>
         <textarea required name="content" required class="noticeTextarea length3000" disabled>{{approval.content}}</textarea>
         <div class="createBtnBox">
-            <!-- <input autocomplete="off" type="submit" value="등록" class="createBtn"> -->
+            <a href="{% url 'approval:approval' %}" value="닫기">{{approval.title}}</a>
         </div>
     </form>
 </div>
