--- a/educational/templates/education/educational_manager.html
+++ b/educational/templates/education/educational_manager.html
@@ -153,7 +153,7 @@
                                     
                                     <tr>
                                         <td colspan="6">
-                                            <div class="uploadFile">
+                                            <div class="upload">
                                                 <div class="uploadFileIcon">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
                                                         viewBox="0 0 14 14">
@@ -169,7 +169,7 @@
                                                         </g>
                                                     </svg>
                                                 </div>
-                                                <span>파일 업로드</span>
+                                                <div><a class="WriteButton" href="/educational/educational_create">파일 업로드</a></div>
                                             </div>
                                         </td>
                                     </tr>
@@ -296,7 +296,7 @@
                                                         </g>
                                                     </svg>
                                                 </div>
-                                                <span>파일 업로드</span>
+                                                <div><a class="WriteButton" href="/educational/educational_create">파일 업로드</a></div>
                                             </div>
                                         </td>
                                     </tr>
@@ -423,7 +423,7 @@
                                                         </g>
                                                     </svg>
                                                 </div>
-                                                <span>파일 업로드</span>
+                                                <div><a class="WriteButton" href="/educational/educational_create">파일 업로드</a></div>
                                             </div>
                                         </td>
                                     </tr>
