--- a/static/css/education/educational_manager.css
+++ b/static/css/education/educational_manager.css
@@ -404,3 +404,11 @@
     margin-bottom: 1rem;
     text-align: right;
 }
+
+.upload{
+    display: flex;
+    justify-content: space-between;
+    width: 10rem;
+    margin: 0 auto;
+    cursor: pointer;
+}
